--- a/css/agency.css
+++ b/css/agency.css
@@ -265,7 +265,7 @@ header {
     text-align: center;
     color: #fff;
     background-attachment: scroll;
-    background-image: url(../img/road_bg.jpg);
+    background-image: url(../img/kids_bg.jpg);
     background-position: center center;
     background-repeat: none;
     -webkit-background-size: cover;
